Update pytorch.ipnb: confusion matrix

--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -622,39 +622,43 @@
     }
    ],
    "source": [
-    "# class in CIFAR-10 dataset\n",
+    "# Define the number of classes in the CIFAR-10 dataset\n",
     "num_classes = 10\n",
     "\n",
-    "# metric\n",
+    "# Define metrics to evaluate the model's performance\n",
     "accuracy = MulticlassAccuracy(num_classes=num_classes, average=\"macro\")\n",
     "precision = MulticlassPrecision(num_classes=num_classes, average=\"macro\")\n",
     "recall = MulticlassRecall(num_classes=num_classes, average=\"macro\")\n",
     "f1 = MulticlassF1Score(num_classes=num_classes, average=\"macro\")\n",
-    "conf_matrix = MulticlassConfusionMatrix(num_classes=num_classes)\n",
+    "conf_matrix = MulticlassConfusionMatrix(num_classes=num_classes) # Confusion matrix to visualize model predictions\n",
     "\n",
     "# load data from test loader\n",
     "model.eval()\n",
-    "all_preds = []\n",
-    "all_labels = []\n",
+    "all_preds = [] # List to store predictions\n",
+    "all_labels = [] # List to store actual labels\n",
+    "\n",
+    "# No gradient calculation needed for evaluation\n",
     "with torch.no_grad():\n",
     "    for inputs, labels in test_loader:\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        outputs = model(inputs)\n",
     "        _, predicted = torch.max(outputs, 1)  # max predict value\n",
-    "        # covert to numpy\n",
+    "        # Convert predictions and labels to numpy for metric calculation\n",
     "        all_preds.extend(predicted.cpu().numpy())  \n",
     "        all_labels.extend(labels.cpu().numpy()) \n",
-    "# convert to tensor\n",
+    "        \n",
+    "# Convert predictions and labels to tensors for metric calculation\n",
     "all_preds = torch.tensor(all_preds)\n",
     "all_labels = torch.tensor(all_labels)\n",
     "\n",
-    "# Evaluate\n",
+    "# Evaluate model performance using defined metrics\n",
     "acc = accuracy(all_preds, all_labels)\n",
     "prec = precision(all_preds, all_labels)\n",
     "rec = recall(all_preds, all_labels)\n",
     "f1_score = f1(all_preds, all_labels)\n",
     "conf_matrix_result = conf_matrix(all_preds, all_labels)\n",
     "\n",
+    "# Print evaluation metrics\n",
     "print(f\"Accuracy: {acc:.4f}\")\n",
     "print(f\"Precision: {prec:.4f}\")\n",
     "print(f\"Recall: {rec:.4f}\")\n",
