--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Pytorch\n",
     "\n",
-    "---"
+    "---\n",
+    "Student:<br>\n",
+    "Đinh Vũ Gia Hân - 22127098<br>\n",
+    "Đỗ Lê Khoa - 22127195"
    ]
   },
   {
@@ -131,7 +134,7 @@
     "\n",
     "**Explanation**:\n",
     "- If \\(x > 0\\), the output is \\(x\\).\n",
-    "- If \\(x \\leq 0\\), the output is \\(0\\).\n",
+    "- If \\(x $\\leq$ 0\\), the output is \\(0\\).\n",
     "\n",
     "ReLU helps introduce non-linearity into the network and avoids the vanishing gradient problem commonly encountered with Sigmoid or Tanh activations.\n"
    ]
@@ -539,28 +542,6 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current memory usage: 709.8 MB\n",
-      "Peak usage: 710.5 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "current, peak = tracemalloc.get_traced_memory()\n",
-    "print(f\"Current memory usage: {current / 1024 / 1024:.1f} MB\")\n",
-    "print(f\"Peak usage: {peak / 1024 / 1024:.1f} MB\")\n",
-    "\n",
-    "tracemalloc.stop()"
    ]
   },
   {
