--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -671,8 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# torch.save(model.state_dict(), \"../models/pytorch_model.pth\")  # weight\n",
-    "torch.save(model, \"../models/pytorch_model.pth\")  # model"
+    "torch.save(model, \"pytorch_model.pth\")  # model"
    ]
   },
   {
@@ -701,7 +700,7 @@
    ],
    "source": [
     "# load model\n",
-    "loaded_model = torch.load(\"../models/pytorch_model.pth\", weights_only=False)\n",
+    "loaded_model = torch.load(\"pytorch_model.pth\", weights_only=False)\n",
     "loaded_model.eval()\n"
    ]
   },
