--- a/notebooks/tensorflow_keras.ipynb
+++ b/notebooks/tensorflow_keras.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Tensorflow\n",
     "\n",
-    "---"
+    "---\n",
+    "Student:<br>\n",
+    "Đinh Vũ Gia Hân - 22127098<br>\n",
+    "Đỗ Lê Khoa - 22127195"
    ]
   },
   {
@@ -713,10 +716,10 @@
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "# Save model\n",
-    "model.save('../models/tensorflow_model.h5')\n",
+    "model.save('tensorflow_model.h5')\n",
     "\n",
     "# Load model\n",
-    "loadedModel=tf.keras.models.load_model('../models/tensorflow_model.h5')\n",
+    "loadedModel=tf.keras.models.load_model('tensorflow_model.h5')\n",
     "loadedModel.summary()"
    ]
   },
