--- a/notebooks/tensorflow_keras.ipynb
+++ b/notebooks/tensorflow_keras.ipynb
@@ -30,6 +30,7 @@
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Flatten, BatchNormalization\n",
     "import time\n",
+    "import tracemalloc\n",
     "from tensorflow.keras.callbacks import LearningRateScheduler, EarlyStopping\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
@@ -123,16 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Loader Batches: 313\n",
-      "Validation Loader Batches: 79\n",
-      "Test Loader Batches: 79\n"
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# convert data to tensor\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m X_train_tensor \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39mconvert_to_tensor(X_train, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m      3\u001b[0m y_train_tensor \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconvert_to_tensor(y_train, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m      4\u001b[0m X_val_tensor \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconvert_to_tensor(X_val, dtype\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mfloat32)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
      ]
     }
    ],
@@ -515,6 +518,7 @@
     "\n",
     "# Mark the start time\n",
     "start_time = time.time()  # Record the start time of training for tracking duration\n",
+    "tracemalloc.start()\n",
     "\n",
     "# Train the model\n",
     "history = model.fit(\n",
@@ -530,7 +534,9 @@
     "cesValidLoss = history.history['val_loss']      # Validation loss\n",
     "\n",
     "# Mark the end time\n",
-    "end_time = time.time()"
+    "end_time = time.time()\n",
+    "current, peak = tracemalloc.get_traced_memory()\n",
+    "tracemalloc.stop()"
    ]
   },
   {
@@ -577,6 +583,17 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the memory usage\n",
+    "print(f\"Current memory usage: {current / 10**6:.2f} MB\")\n",
+    "print(f\"Peak usage: {peak / 10**6:.2f} MB\")"
    ]
   },
   {
